# agentic_tourism_concierge

./: .gitignore  README.md  chainlit.md  pyproject.toml  start-ollama.sh
.chainlit/: config.toml
.kiro/specs/hybrid-product-screener/: design.md  requirements.md  tasks.md
docs/: architecture.md
metrics/: docker-compose.otel.yml  otel-collector-config.yml
metrics/grafana/provisioning/dashboards/: llm-metrics.json
src/: logging_config.py  personal_information_collector_agent.py
src/common/: config.py  geocoding.py  llm_utils.py  logging_config.py  pipeline.py
src/common/metrics/: __init__.py  instruments.py
src/holiday_information_collector/: app.py  core.py  llm_utils.py
src/orchestrator/: __init__.py  core.py
src/personal_information_collector/: app.py  core.py  logging_config.py
src/product_hard_screener/: __init__.py  core.py
src/product_ingestor/: __init__.py  core.py
src/product_soft_screener/: __init__.py  core.py
src/product_synthesizer/: __init__.py  core.py  types.py
src/products_screener/: ingestor.py  llm_utils.py  main-test-tmp.py  matcher.py  synthesizer.py
src/unified_app/: __init__.py  app.py  formatting.py  orchestration.py
tests/: conftest.py
tests/common/: test_llm_utils.py
tests/holiday_information_collector/: test_holiday_collector.py
tests/orchestrator/: test_orchestrator.py
tests/personal_information_collector/: test_personal_collector.py
tests/product_hard_screener/: test_hard_screener.py
tests/product_soft_screener/: test_soft_screener.py
tests/products_screener/: test_checkpoint_filtering.py  test_hybrid_screener.py
