[project]
name = "agentic_tourism_concierge"
version = "0.1.0"
description = "Simple Full-Stack Poc of an gentic tourism concierge"
authors = [{ name = "Stefano Emilio Campanini", email = "stefano.campanini@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "ollama>=0.6.1",
]

[project.optional-dependencies]
test = [

]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0"
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_tourism_crew"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
