[project]
name = "agentic_tourism_concierge"
version = "0.1.0"
description = "Simple Full-Stack Poc of an gentic tourism concierge"
authors = [{ name = "Stefano Emilio Campanini", email = "stefano.campanini@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit>=2.9.4",
    "duckdb>=1.4.3",
    "lancedb>=0.27.0",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "pandas>=2.0.0",
    "pylance>=1.0.3",
    "rich>=13.0.0",
    "sentence-transformers>=5.0.0",
    "tantivy>=0.25.1",
]

[project.optional-dependencies]
test = [

]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.0"
]

[project.scripts]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
